修改评论内容

--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -262,7 +262,7 @@ livere:
 # To use it, activate the configuration item and set appId and appKey.
 # Valine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey.
 valine:
-  enable: true
+  enable: false
   appId: UV2Mi7xxSONIhocaXSG37fRI-gzGzoHsz
   appKey: OTfdGxHfEex1gK0fXC5tBtIm
   notify: false
@@ -275,7 +275,7 @@ valine:
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
 # 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
 githubLink:
-  enable: true
+  enable: false
   url: https://github.com/shawfyBoy/
   title: Fork Me
 
